--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="menu__top">
+            <ul class="header__menu">
+                <li class="neader__menu-item"></li>
+                <li class="neader__menu-item"></li>
+                <li class="neader__menu-item"></li>
+            </ul>
+        </div>
+    </header>
 </body>
 
 </html>
